--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         </div>
                         <div class="col col-lg-3 mt-10">
                             <div class="card__item">
-                                <a href="https://www.instagram.com/@iamdarkv" target="_blank" class="card__link">
+                                <a href="https://www.instagram.com/iamdarkv" target="_blank" class="card__link">
                                     <div class="link__icon">
                                         <i class="fab fa-instagram"></i>
                                     </div>
