--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         </div>
                         <div class="col col-lg-3 mt-10">
                             <div class="card__item">
-                                <a href="https://www.instagram.com/iamdarkv" target="_blank" class="card__link">
+                                <a href="https://www.instagram.com/@iamdarkv" target="_blank" class="card__link">
                                     <div class="link__icon">
                                         <i class="fab fa-instagram"></i>
                                     </div>
@@ -112,6 +112,8 @@
                     <a href="https://iamdarkv.github.io/"><i class="fas fa-arrow-left"></i></a>
                 </div>
                 <div class="toggle toggle__theme">
+                    <i class="fas fa-heart"></i>
+                </div>
                 <div class="button__list mt-10">
                     <div class="row">
                         <div class="col col-lg-6 mt-10">
