--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         </div>
                         <div class="col col-lg-3 mt-10">
                             <div class="card__item">
-                                <a href="mailto:darkv0615@gmail.com" class="card__link">
+                                <a href="mailto:hv.darkv@gmail.com" class="card__link">
                                     <div class="link__icon">
                                         <i class="fab fa-google" style="color: red;"></i>
                                     </div>
